main.tf
resource "aws_vpc" "mtc_vpc" {
  cidr_block           = "10.123.0.0/16"
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name = "dev"
  }

}

resource "aws_subnet" "mtc_public_subnet" {
  vpc_id                  = aws_vpc.mtc_vpc.id
  cidr_block              = "10.123.1.0/24"
  map_public_ip_on_launch = true
  availability_zone       = "eu-north-1a"

  tags = {
    Name = "dev-public"
  }

}

resource "aws_internet_gateway" "mtc_igw" {
  vpc_id = aws_vpc.mtc_vpc.id

  tags = {
    Name = "dev-igw"
  }

}

resource "aws_route_table" "mtc_public_rt" {
  vpc_id = aws_vpc.mtc_vpc.id

  tags = {
    Name = "dev_public_rt"
  }

}

resource "aws_route" "default_route" {
  route_table_id         = aws_route_table.mtc_public_rt.id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = aws_internet_gateway.mtc_igw.id

}

resource "aws_route_table_association" "mtc_public_assoc" {
  subnet_id      = aws_subnet.mtc_public_subnet.id
  route_table_id = aws_route_table.mtc_public_rt.id

}

resource "aws_security_group" "mtc_sg" {
  name        = "dev_sg"
  description = "dev security group"
  vpc_id      = aws_vpc.mtc_vpc.id
}

resource "aws_vpc_security_group_ingress_rule" "mtc_ingress" {
  security_group_id = aws_security_group.mtc_sg.id
  cidr_ipv4         = aws_vpc.mtc_vpc.cidr_block
  from_port         = "443"
  ip_protocol       = "tcp"
  to_port           = "443"

}



#resource "aws_vpc_security_group_egress_rule" "mtc_egress" {
#  security_group_id = aws_security_group.mtc_sg.id
#  ip_protocol       = "-1"
#  cidr_ipv4         = "0.0.0.0/0"

#}

resource "aws_security_group" "mtc_egress" {
    egress {
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"]

    }
  
}

resource "aws_key_pair" "mtc_auth" {
    key_name = "mtc_key"
    public_key = file("~/.ssh/mtc_keypair.pub")
  
}

resource "aws_instance" "dev_node" {
    instance_type = "t3.micro"
    ami = data.aws_ami.server_ami.id
    key_name = aws_key_pair.mtc_auth.id
    vpc_security_group_ids = [aws_security_group.mtc_sg.id]
    subnet_id = aws_subnet.mtc_public_subnet.id
    user_data = file("userdata.tpl")

    tags = {
        Name = "dev-node1"
    }

  
}
